--- a/itis3135/project_overview.html
+++ b/itis3135/project_overview.html
@@ -209,8 +209,69 @@
     </p>
 
     <h3>Page Design Details</h3>
-    <!-- (Rest of your content remains exactly the same as before) -->
+<h4>Home Page</h4>
+    <ul>
+      <li><strong>Purpose:</strong> Introduce MTC and display highlights of events and updates.</li>
+      <li><strong>Users:</strong> General visitors and current members.</li>
+      <li><strong>Content:</strong> Club overview, event highlights, welcome message, and navigation links.</li>
+      <li><strong>Data Entry:</strong> None.</li>
+      <li><strong>Interactive Elements:</strong> jQuery image carousel and animated “Join Us” button.</li>
+    </ul>
 
+    <h4>About Us</h4>
+    <ul>
+      <li><strong>Purpose:</strong> Explain the club’s mission, history, and leadership team.</li>
+      <li><strong>Users:</strong> Visitors wanting to learn more about the organization.</li>
+      <li><strong>Content:</strong> Text sections and officer photos with bios.</li>
+      <li><strong>Interactive Elements:</strong> Accordion or collapsible panels for officer bios using jQuery UI.</li>
+    </ul>
+
+    <h4>Events</h4>
+    <ul>
+      <li><strong>Purpose:</strong> Display information about upcoming and past events.</li>
+      <li><strong>Users:</strong> Members and students interested in attending events.</li>
+      <li><strong>Content:</strong> Event name, date, description, and category (e.g., panel, workshop, social).</li>
+      <li><strong>Data Entry:</strong> Optional search/filter bar.</li>
+      <li><strong>Interactive Elements:</strong> AJAX event filtering by category.</li>
+    </ul>
+
+    <h4>Resources</h4>
+    <ul>
+      <li><strong>Purpose:</strong> Provide members with learning resources and recordings from past events.</li>
+      <li><strong>Users:</strong> Club members and students interested in self-learning.</li>
+      <li><strong>Content:</strong> Links to resources, tutorials, and embedded media.</li>
+      <li><strong>Interactive Elements:</strong> Hover tooltips and collapsible resource sections.</li>
+    </ul>
+
+    <h4>Join Us / Contact</h4>
+    <ul>
+      <li><strong>Purpose:</strong> Collect interest and contact information from potential members.</li>
+      <li><strong>Users:</strong> Prospective members, sponsors, and collaborators.</li>
+      <li><strong>Content:</strong> Input fields for name, email, and interest area.</li>
+      <li><strong>Validations:</strong> Required fields validation using JavaScript.</li>
+      <li><strong>Interactive Elements:</strong> Form validation and confirmation popup after submission.</li>
+    </ul>
+
+    <h3>Dynamic Functionality</h3>
+    <p>
+      This project includes several interactive features using JavaScript, jQuery, and AJAX to improve user engagement and functionality:
+    </p>
+    <ul>
+      <li><strong>Home Page:</strong> jQuery image carousel for event highlights.</li>
+      <li><strong>About Us:</strong> jQuery UI accordion for officer bios.</li>
+      <li><strong>Events Page:</strong> AJAX event filtering by category.</li>
+      <li><strong>Join Us Page:</strong> JavaScript form validation with alert confirmation.</li>
+      <li><strong>Resources Page:</strong> Interactive gallery using hover effects and expandable panels.</li>
+    </ul>
+
+    <p>
+      Example sites that inspired these interactive features:
+    </p>
+    <ul>
+      <li><a href="https://gdsc.community.dev" target="_blank">Google Developer Student Clubs</a></li>
+      <li><a href="https://womenwhocode.com" target="_blank">Women Who Code</a></li>
+    </ul>
+    
     <h3>Notes & References</h3>
     <p>
       References and inspirations included online student community websites, Draw.io diagrams, and examples of interactive club portals. 
