--- a/itis3135/mtc_client/join.html
+++ b/itis3135/mtc_client/join.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Join Us | Muslim Technology Collaborative</title>
   <link rel="stylesheet" href="style.css">
+  <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <header>
