--- a/itis3135/mtc_client/index.html
+++ b/itis3135/mtc_client/index.html
@@ -23,7 +23,7 @@
 
   <main id="home-main">
     <section class="hero">
-      <img src="images/club-photo.jpg" alt="Club Members" class="hero-img">
+      <img src="images/square-logo.jpg" alt="Club logo" class="logo-img">
       <h2>Building a space for Muslim students @ UNCC in tech.</h2>
       <p>We’re a student-led initiative connecting Muslim students who share an interest in technology, innovation, and community building.</p>
     </section>
