--- a/itis3135/mtc_client/about.html
+++ b/itis3135/mtc_client/about.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <header>
+    <img src="images/square_logo.png" alt="Club logo" class="logo-img">
     <h1>About Us</h1>
     <nav class="navbar">
       <ul>
@@ -26,9 +27,13 @@
       <p>The Muslim Technology Collaborative empowers Muslim students to explore technology through collaboration, mentorship, and community engagement.</p>
     </section>
 
-    <section>
+    <section class="section-card">
       <h2>Leadership</h2>
-      <p>Our executive board is made up of passionate students in computer science, engineering, and design who are dedicated to creating inclusive opportunities.</p>
+      <ul>
+        <li>President: Student A</li>
+        <li>VP: Student B</li>
+        <li>Secretary: Student C</li>
+      </ul>
     </section>
   </main>
 
