--- a/itis3135/mtc_client/events.html
+++ b/itis3135/mtc_client/events.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <header>
+    <img src="images/square_logo.png" alt="Club logo" class="logo-img">
     <h1>Events</h1>
     <nav class="navbar">
       <ul>
@@ -19,20 +20,39 @@
       </ul>
     </nav>
   </header>
+<body>
+  <header>
+    <img src="images/square_logo.png" alt="Club logo" class="logo-img">
+    <h1>Resources</h1>
+    <nav class="navbar">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="events.html">Events</a></li>
+        <li><a href="resources.html" class="active">Resources</a></li>
+        <li><a href="join.html">Join Us</a></li>
+      </ul>
+    </nav>
+  </header>
 
   <main>
-    <h2>Upcoming Events</h2>
-    <ul>
-      <li>💡LPL Financial Panel – November 17, 2025</li>
-      <li>🤝 Networking Mixer –  TBA</li>
-    </ul>
+    <section class="section-card">
+      <h2>Technical Learning Resources</h2>
+      <ul>
+        <li><a href="https://freecodecamp.org" target="_blank">FreeCodeCamp</a></li>
+        <li><a href="https://developer.mozilla.org" target="_blank">MDN Web Docs</a></li>
+        <li><a href="https://www.w3schools.com" target="_blank">W3Schools</a></li>
+      </ul>
+    </section>
 
-    <h2>Past Events</h2>
-    <p>Hello World</p>
+    <section class="section-card">
+      <h2>Speaker Recordings</h2>
+      <p>Watch recordings of past workshops and talks from our members and guest speakers.</p>
+    </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 Muslim Technology Collaborative</p>
+    <p>&copy; 2025 Muslim Technology Collaborative | UNC Charlotte</p>
   </footer>
 </body>
 </html>
