--- a/itis3135/mtc_client/index.html
+++ b/itis3135/mtc_client/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <header>
+    <img src="images/square_logo.png" alt="Club logo" class="logo-img">
     <h1 id="site-title">Muslim Technology Collaborative</h1>
     <nav class="navbar">
       <ul>
@@ -21,15 +22,15 @@
     </nav>
   </header>
 
-  <main id="home-main">
-    <section class="hero">
-      <img src="images/square_logo.png" alt="Club logo" class="logo-img">
-      <h2>Building a space for Muslim students @ UNCC in tech.</h2>
+  <main>
+    <section class="section-card">
+      <h2>Welcome to the Muslim Technology Collaborative</h2>
       <p>We’re a student-led initiative connecting Muslim students who share an interest in technology, innovation, and community building.</p>
+      <img src="images/square_logo.png" alt="Club logo" class="logo-img">
     </section>
 
-    <section class="highlights">
-      <h3>Upcoming Events</h3>
+    <section class="section-card">
+      <h2>Upcoming Events</h2>
       <p>Join us at our next panel discussion with LPL! Learn more about LPL Financial, Interview tips, and hear from experienced interns.</p>
     </section>
   </main>
