--- a/itis3135/mtc_client/join.html
+++ b/itis3135/mtc_client/join.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <header>
+    <img src="images/square_logo.png" alt="Club logo" class="logo-img">
     <h1>Join Us</h1>
     <nav class="navbar">
       <ul>
@@ -21,25 +22,26 @@
   </header>
 
   <main>
-    <h2>Interested in Joining?</h2>
-    <p>Fill out the form below to get involved with the Muslim Technology Collaborative!</p>
+    <section class="section-card">
+      <h2>Become a Member</h2>
+      <p>Fill out the form below to get involved with the Muslim Technology Collaborative!</p>
+      <form>
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" required>
 
-    <form>
-      <label for="name">Name:</label>
-      <input type="text" id="name" name="name" required>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required>
 
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required>
+        <label for="message">Why do you want to join?</label>
+        <textarea id="message" name="message"></textarea>
 
-      <label for="message">Why do you want to join?</label>
-      <textarea id="message" name="message"></textarea>
-
-      <button type="submit">Submit</button>
-    </form>
+        <button type="submit">Submit</button>
+      </form>
+    </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 Muslim Technology Collaborative</p>
+    <p>&copy; 2025 Muslim Technology Collaborative | UNC Charlotte</p>
   </footer>
 </body>
 </html>
