--- a/itis3135/mtc_client/resources.html
+++ b/itis3135/mtc_client/resources.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <header>
+    <img src="images/square_logo.png" alt="Club logo" class="logo-img">
     <h1>Resources</h1>
     <nav class="navbar">
       <ul>
@@ -21,16 +22,40 @@
   </header>
 
   <main>
-    <h2>Learning Resources</h2>
-    <ul>
-      <li><a href="https://freecodecamp.org" target="_blank">FreeCodeCamp</a></li>
-      <li><a href="https://developer.mozilla.org" target="_blank">MDN Web Docs</a></li>
-      <li><a href="https://www.w3schools.com" target="_blank">W3Schools</a></li>
-    </ul>
+    <!-- Technical Learning Resources -->
+    <section class="section-card">
+      <h2>Technical Learning Resources</h2>
+      <ul>
+        <li><a href="https://www.freecodecamp.org/" target="_blank">FreeCodeCamp</a> – Learn web development for free</li>
+        <li><a href="https://developer.mozilla.org/" target="_blank">MDN Web Docs</a> – Comprehensive web documentation</li>
+        <li><a href="https://www.w3schools.com/" target="_blank">W3Schools</a> – Tutorials for coding basics</li>
+        <li><a href="https://www.khanacademy.org/computing" target="_blank">Khan Academy – Computing</a> – Interactive coding lessons</li>
+      </ul>
+    </section>
+
+    <!-- Speaker Recordings -->
+    <section class="section-card">
+      <h2>Speaker Recordings</h2>
+      <ul>
+        <li>Intro to UX Design Workshop – <a href="#">Watch Video</a></li>
+        <li>Women in AI Panel – <a href="#">Watch Video</a></li>
+        <li>Hackathon Kickoff – <a href="#">Watch Video</a></li>
+      </ul>
+    </section>
+
+    <!-- Useful Links -->
+    <section class="section-card">
+      <h2>Useful Links</h2>
+      <ul>
+        <li><a href="https://www.hackerrank.com/" target="_blank">HackerRank</a> – Practice coding challenges</li>
+        <li><a href="https://www.github.com/" target="_blank">GitHub</a> – Explore open-source projects</li>
+        <li><a href="https://www.stackoverflow.com/" target="_blank">Stack Overflow</a> – Get coding help from the community</li>
+      </ul>
+    </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 Muslim Technology Collaborative</p>
+    <p>&copy; 2025 Muslim Technology Collaborative | UNC Charlotte</p>
   </footer>
 </body>
 </html>
