--- a/itis3135/mtc_client/about.html
+++ b/itis3135/mtc_client/about.html
@@ -22,7 +22,7 @@
   </header>
 
   <main>
-    <section>
+    <section class="section-card">
       <h2>Our Mission</h2>
       <p>The Muslim Technology Collaborative empowers Muslim students to explore technology through collaboration, mentorship, and community engagement.</p>
     </section>
