--- a/itis3135/mtc_client/about.html
+++ b/itis3135/mtc_client/about.html
@@ -8,8 +8,10 @@
 </head>
 <body>
   <header>
-    <img src="images/square_logo.png" alt="Club logo" class="logo-img">
-    <h1>About Us</h1>
+  <a href="index.html">
+    <img src="images/circle-logo.png" alt="Club logo" class="logo-img">
+  </a>    
+  <h1>About Us</h1>
     <nav class="navbar">
       <ul>
         <li><a href="index.html">Home</a></li>
