--- a/itis3135/mtc_client/index.html
+++ b/itis3135/mtc_client/index.html
@@ -9,8 +9,10 @@
 </head>
 <body>
   <header>
-    <img src="images/square_logo.png" alt="Club logo" class="logo-img">
-    <h1 id="site-title">Muslim Technology Collaborative</h1>
+  <a href="index.html">
+    <img src="images/circle-logo.png" alt="Club logo" class="logo-img">
+  </a>    
+  <h1 id="site-title">Muslim Technology Collaborative</h1>
     <nav class="navbar">
       <ul>
         <li><a href="index.html" class="active">Home</a></li>
