--- a/itis3135/mtc_client/join.html
+++ b/itis3135/mtc_client/join.html
@@ -9,7 +9,7 @@
 <body>
   <header>
   <a href="index.html">
-    <img src="images/circle-logo.png" alt="Club logo" class="logo-img">
+    <img src="images/circle_logo.png" alt="Club logo" class="logo-img">
   </a>    
   <h1>Join Us</h1>
     <nav class="navbar">
