--- a/itis3135/mtc_client/index.html
+++ b/itis3135/mtc_client/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
   <a href="index.html">
-    <img src="images/circle-logo.png" alt="Club logo" class="logo-img">
+    <img src="images/circle_logo.png" alt="Club logo" class="logo-img">
   </a>    
   <h1 id="site-title">Muslim Technology Collaborative</h1>
     <nav class="navbar">
