--- a/itis3135/mtc_client/resources.html
+++ b/itis3135/mtc_client/resources.html
@@ -9,7 +9,7 @@
 <body>
   <header>
   <a href="index.html">
-    <img src="images/circle_logo.png" alt="Club logo" class="logo-img">
+    <img src="images/circle_logo.png" alt="Club logo" class="circle-logo-img">
   </a>    
   <h1>Resources</h1>
     <nav class="navbar">
