--- a/itis3135/mtc_client/events.html
+++ b/itis3135/mtc_client/events.html
@@ -11,31 +11,32 @@
   <a href="index.html">
     <img src="images/circle_logo.png" alt="Club logo" class="circle-logo-img">
   </a>    
-  <h1>Resources</h1>
+  <h1>Events</h1>
     <nav class="navbar">
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About Us</a></li>
-        <li><a href="events.html">Events</a></li>
-        <li><a href="resources.html" class="active">Resources</a></li>
+        <li><a href="events.html" class = "active">Events</a></li>
+        <li><a href="resources.html">Resources</a></li>
         <li><a href="join.html">Join Us</a></li>
       </ul>
     </nav>
   </header>
 
-  <main>
+   <main>
     <section class="section-card">
-      <h2>Technical Learning Resources</h2>
+      <h2>Upcoming Events</h2>
       <ul>
-        <li><a href="https://freecodecamp.org" target="_blank">FreeCodeCamp</a></li>
-        <li><a href="https://developer.mozilla.org" target="_blank">MDN Web Docs</a></li>
-        <li><a href="https://www.w3schools.com" target="_blank">W3Schools</a></li>
+        <li>💡 LPL Financial Mixer – November 17, 2025</li>
+        <li>💻 Hackathon – TBA</li>
       </ul>
     </section>
 
     <section class="section-card">
-      <h2>Speaker Recordings</h2>
-      <p>Watch recordings of past workshops and talks from our members and guest speakers.</p>
+      <h2>Past Events</h2>
+      <ul>
+        <li>Hello World</li>
+      </ul>
     </section>
   </main>
 
