--- a/itis3135/mtc_client/join.html
+++ b/itis3135/mtc_client/join.html
@@ -12,6 +12,8 @@
     <img src="images/circle_logo.png" alt="Club logo" class="circle-logo-img">
   </a>    
   <h1>Join Us</h1>
+  <img src="images/mtc_photo1.jpeg" alt="mtc event photo" class="logo-img">
+
     <nav class="navbar">
       <ul>
         <li><a href="index.html">Home</a></li>
