--- a/itis3135/mtc_client/resources.html
+++ b/itis3135/mtc_client/resources.html
@@ -53,6 +53,8 @@
         <li><a href="https://www.github.com/" target="_blank">GitHub</a> – Explore open-source projects</li>
         <li><a href="https://www.stackoverflow.com/" target="_blank">Stack Overflow</a> – Get coding help from the community</li>
       </ul>
+      <img src="images/mtc_photo4.jpeg" alt="mtc event photo" class="logo-img">
+
     </section>
   </main>
 
