--- a/itis3135/mtc_client/index.html
+++ b/itis3135/mtc_client/index.html
@@ -28,6 +28,7 @@
     <section class="section-card">
       <h2>Welcome to the Muslim Technology Collaborative</h2>
       <p>We’re a student-led initiative connecting Muslim students who share an interest in technology, innovation, and community building.</p>
+      <img src="images/square_logo.png" alt="Club logo" class="logo-img">
     </section>
 
     <section class="section-card">
