--- a/itis3135/mtc_client/join.html
+++ b/itis3135/mtc_client/join.html
@@ -12,8 +12,6 @@
     <img src="images/circle_logo.png" alt="Club logo" class="circle-logo-img">
   </a>    
   <h1>Join Us</h1>
-  <img src="images/mtc_photo1.jpeg" alt="mtc event photo" class="logo-img">
-
     <nav class="navbar">
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -41,6 +39,8 @@
 
         <button type="submit">Submit</button>
       </form>
+       <img src="images/mtc_photo1.jpeg" alt="mtc join photo" class="logo-img">
+
     </section>
   </main>
 
