--- a/itis3135/mtc_client/about.html
+++ b/itis3135/mtc_client/about.html
@@ -27,7 +27,7 @@
     <section class="section-card">
       <h2>Our Mission</h2>
       <p>The Muslim Technology Collaborative empowers Muslim students to explore technology through collaboration, mentorship, and community engagement.</p>
-      <img src="images/mtc_photo2.jpeg" alt="mtc event photo" class="logo-img">
+      <img src="images/mtc_photo2.jpeg" alt="mtc about photo" class="logo-img">
 
     </section>
 
