--- a/itis3135/mtc_client/join.html
+++ b/itis3135/mtc_client/join.html
@@ -39,8 +39,9 @@
 
         <button type="submit">Submit</button>
       </form>
-       <img src="images/mtc_photo1.jpeg" alt="mtc join photo" class="logo-img">
-
+    </section>
+    <section>
+      <img src="images/mtc_photo1.jpeg" alt="mtc join photo" class="logo-img">
     </section>
   </main>
 
