--- a/itis3135/mtc_client/join.html
+++ b/itis3135/mtc_client/join.html
@@ -41,6 +41,7 @@
       </form>
     </section>
     <section>
+      <h6>Join MTC @UNCC Today!</h6>
       <img src="images/mtc_photo1.jpeg" alt="mtc join photo" class="logo-img">
     </section>
   </main>
