--- a/itis3135/mtc_client/join.html
+++ b/itis3135/mtc_client/join.html
@@ -41,7 +41,7 @@
       </form>
     </section>
     <section>
-      <h6>Join MTC @UNCC Today!</h6>
+      <h1>FOLLOW US ON IG: @MTCUNCC</h1>
       <img src="images/mtc_photo1.jpeg" alt="mtc join photo" class="logo-img">
     </section>
   </main>
