--- a/itis3135/review1.html
+++ b/itis3135/review1.html
@@ -28,10 +28,10 @@
     <p>The links are not correctly formatted and they are still blue</p>
     <p><strong>CRAP</strong></p>
     <ul class="courses">
-        <li><strong>Contrast</strong> Contrast is pretty good, everything on the page is easy to read!</li>
-        <li><strong>Repitition</strong>Consistent use of formatting of bullet points, and links.</li>
-        <li><strong>Alignment</strong>The image should be center aligned as well as the caption. Everything else looks perfect. Great use of nested bullet points!</li>
-        <li><strong>Proximity</strong>All related content is grouped together and makes sense.</li>
+        <li><strong>Contrast:</strong> Contrast is pretty good, everything on the page is easy to read!</li>
+        <li><strong>Repetition:</strong> Consistent use of formatting of bullet points, and links.</li>
+        <li><strong>Alignment:</strong> The image should be center aligned as well as the caption. Everything else looks perfect. Great use of nested bullet points!</li>
+        <li><strong>Proximity:</strong> All related content is grouped together and makes sense.</li>
     </ul>
     <p>Header/Footer: The h1 of the page should be Tristan Meyers' Tedious Meerkat | [name of page]. I also recommend seperating the sections clearly to differentiate it from the rest of the page. The footer also has a repetition of a couple of the same links such as github.io and itis3135.</p>
     <p>The main section is good. All of the required information is present and it looks properly formatted.</p>
