--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -211,6 +211,20 @@
       header { flex-direction: column; align-items: flex-start; }
       .nav-divider { display: none; }
     }
+    to-top{
+    position:fixed; 
+    bottom:25px; 
+    right:25px;
+    padding:10px 15px; 
+    border:none;
+    background:var(--accent-light); 
+    color:white;
+    border-radius:50%; 
+    font-size:1.3rem;
+    cursor:pointer; 
+    display:none; 
+    box-shadow:0 4px 10px rgba(0,0,0,0.2);
+    }
     body.dark {
     --bg: #1f1f1f;
     --card: #2b2b2b;
@@ -468,14 +482,7 @@
   z-index:9999;">
   <img id="lightbox-img" src="" style="max-width:90%; max-height:90%; border-radius:12px;">
 </div>
-<button id="toTop" style="
-  position:fixed; bottom:25px; right:25px;
-  padding:10px 15px; border:none;
-  background:var(--accent-light); color:white;
-  border-radius:50%; font-size:1.3rem;
-  cursor:pointer; display:none; box-shadow:0 4px 10px rgba(0,0,0,0.2);">
-  🧁
-</button>
+<button id="toTop"></button>
 
 </body>
 </html>
