--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -225,7 +225,7 @@
     display:none; 
     box-shadow:0 4px 10px rgba(0,0,0,0.2);
     }
-    body.dark {
+    .dark {
     --bg: #1f1f1f;
     --card: #2b2b2b;
     --text: #f4f4f4;
@@ -475,12 +475,7 @@
       });
     });
   </script>
-  <div id="lightbox" style="
-  display:none; position:fixed; inset:0;
-  background:rgba(0,0,0,0.8); 
-  justify-content:center; align-items:center;
-  z-index:9999;">
-  <img id="lightbox-img" src="" style="max-width:90%; max-height:90%; border-radius:12px;">
+  <div id="lightbox">
 </div>
 <button id="toTop"></button>
 
