add comments about documenting code

--- a/itis3135/mtc_client/events.html
+++ b/itis3135/mtc_client/events.html
@@ -12,6 +12,7 @@
     <img src="images/circle_logo.png" alt="Club logo" class="circle-logo-img">
   </a>    
   <h1>Events</h1>
+  <!-- Navigation Bar -->
     <nav class="navbar">
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -25,6 +26,8 @@
 
    <main>
     <section class="section-card">
+      <!--Upcoming events section
+      including current, past and upcoming events with dates. Future iterations would also include actual real club photos and info-->
       <h2>Upcoming Events</h2>
       <ul>
         <li>💡 LPL Financial Mixer – November 17, 2025</li>
@@ -34,6 +37,7 @@
     </section>
 
     <section class="section-card">
+      <!--Example of past events, would include more information with the clubs approval.-->
       <h2>Past Events</h2>
       <ul>
         <li>Hello World</li>
