--- a/itis3135/mtc_client/join.html
+++ b/itis3135/mtc_client/join.html
@@ -13,6 +13,7 @@
   </a>    
   <h1>Join Us</h1>
     <nav class="navbar">
+      <!--Navigation bar-->
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About Us</a></li>
@@ -25,6 +26,7 @@
 
   <main>
     <section class="section-card">
+      <!--Form to become a member-->
       <h2>Become a Member</h2>
       <p>Fill out the form below to get involved with the Muslim Technology Collaborative!</p>
       <form>
@@ -41,6 +43,7 @@
       </form>
     </section>
     <section>
+      <!--social media information-->
       <h2>FOLLOW US ON IG: @MTCUNCC</h2>
       <img src="images/mtc_photo1.jpeg" alt="mtc join photo" class="logo-img">
     </section>
