--- a/itis3135/mtc_client/resources.html
+++ b/itis3135/mtc_client/resources.html
@@ -12,6 +12,7 @@
     <img src="images/circle_logo.png" alt="Club logo" class="circle-logo-img">
   </a>    
   <h1>Resources</h1>
+  <!--Navigation bar-->
     <nav class="navbar">
       <ul>
         <li><a href="index.html">Home</a></li>
