--- a/itis3135/mtc_client/about.html
+++ b/itis3135/mtc_client/about.html
@@ -25,6 +25,7 @@
 
   <main>
     <section class="section-card">
+      <!--club mission statement-->
       <h2>Our Mission</h2>
       <p>The Muslim Technology Collaborative empowers Muslim students to explore technology through collaboration, mentorship, and community engagement.</p>
     <img src="images/mtc_photo2.jpeg" alt="mtc about photo" class="logo-img" id="missionImg">
@@ -33,6 +34,7 @@
     </section>
 
     <section class="section-card">
+      <!--leadership section, containsb filler students for privacy reason-->
     <h2>Leadership</h2>
     <button id="toggleLeadership">Show Leadership</button>
     <ul id="leadershipList" style="display: none;">
