--- a/itis3135/mtc_client/index.html
+++ b/itis3135/mtc_client/index.html
@@ -26,12 +26,14 @@
 
   <main>
     <section class="section-card">
+      <!--Welcome section-->
       <h2>Welcome to the Muslim Technology Collaborative</h2>
       <p>We’re a student-led initiative connecting Muslim students who share an interest in technology, innovation, and community building.</p>
       <img src="images/square_logo.png" alt="Club logo" class="logo-img">
     </section>
 
     <section class="section-card">
+      <!--Upcoming events information-->
       <h2>Upcoming Events</h2>
       <p>Join us at our next panel discussion with LPL! Learn more about LPL Financial, Interview tips, and hear from experienced interns.</p>
     </section>
